# pathy_svg

./: .gitignore  AGENT.md  CHANGELOG.md  README.md  pyproject.toml  urllib_redirect_test.py
.Jules/: palette.md
.github/workflows/: ci.yml  publish.yml
.jules/: sentinel.md
docs/: index.html  pathy_svg.html  search.js
docs_templates/: module.html.jinja2
examples/: README.md  baseline.csv  data.csv  state_population.csv  treatment.csv  us_states_workflow.py
src/pathy_svg/: __init__.py  _base.py  _compat.py  _constants.py  _css.py  animation.py  annotations.py  cli.py  color.py  coloring.py  data.py  diff.py  document.py  exceptions.py  export.py  gradient.py  highlight.py  inspect.py  layers.py  legend.py  path_parser.py  pattern.py  stroke.py  svg_tools.py  themes.py  transform.py  utils.py
src/pathy_svg/_mixins/: __init__.py  animation.py  annotations.py  coloring.py  diff.py  export.py  layers.py  legend.py  overlay.py  serialization.py  style.py
tests/: conftest.py  test_animation.py  test_annotations.py  test_callable_agg.py  test_cli.py  test_coloring.py  test_css.py  test_diff.py  test_document.py  test_expand_viewbox.py  test_export.py  test_gradient.py  test_group_agg.py  test_highlight.py  test_inspect.py  test_key_attr.py  test_layers.py  test_legend.py  test_packaging.py  test_pattern.py  test_ssrf.py  test_stroke.py  test_themes.py  test_transform.py  test_utils.py
