[project]
name = "pathy-svg"
version = "0.1.0"
description = "Color arbitrary SVG paths by data values — turn any SVG into a heatmap"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10,<3.14"
dependencies = [
    "click>=8.0",
    "lxml>=5.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.optional-dependencies]
export = ["cairosvg>=2.7", "Pillow>=10.0"]
full = ["cairosvg>=2.7", "Pillow>=10.0", "IPython>=8.0"]
cli = ["click>=8.0"]

[project.scripts]
pathy-svg = "pathy_svg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pathy_svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312", "py313"]
