[project]
name = "pathy-svg"
dynamic = ["version"]
description = "Color arbitrary SVG paths by data values — turn any SVG into a heatmap"
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.10,<3.14"
authors = [
    {name = "Yigit Yargili", email = "160510618+yigityargili991@users.noreply.github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Graphics",
    "Topic :: Scientific/Engineering :: Visualization",
    "Typing :: Typed",
]
keywords = ["svg", "heatmap", "visualization", "coloring", "data-visualization", "map"]
dependencies = [
    "click>=8.0",
    "lxml>=5.0",
    "matplotlib>=3.7",
    "numpy>=1.24",
]

[project.urls]
Homepage = "https://github.com/yigityargili991/pathy_svg"
Repository = "https://github.com/yigityargili991/pathy_svg"
Issues = "https://github.com/yigityargili991/pathy_svg/issues"
Changelog = "https://github.com/yigityargili991/pathy_svg/blob/main/CHANGELOG.md"

[project.optional-dependencies]
export = ["cairosvg>=2.7", "Pillow>=10.0"]
full = ["cairosvg>=2.7", "Pillow>=10.0", "IPython>=8.0"]

[project.scripts]
pathy-svg = "pathy_svg.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "src/pathy_svg/__init__.py"

[tool.hatch.build.targets.sdist]
exclude = [".github", "docs", "docs_templates"]

[tool.hatch.build.targets.wheel]
packages = ["src/pathy_svg"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 88
target-version = "py310"

[dependency-groups]
dev = [
    "cairosvg>=2.9.0",
]
